--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 h1 {
   background: var(--secondColor);
-  color: var(var(--thirdColor));
+  color: var(--thirdColor);
   padding: 30px 0;
   text-transform: uppercase;
   font-size: 2.2rem;
@@ -55,6 +55,7 @@ p {
 #totalTip sup {
   font-size: 1.5rem;
   font-weight: 900;
+  text-align: center;
 }
 
 .billAmountInput {
@@ -96,6 +97,7 @@ button:active {
 
 .billAmt {
   padding: 10px;
+  text-align: center;
 }
 .billAmt:focus {
   border: 3px solid var(--secondColor);
@@ -104,12 +106,14 @@ button:active {
 
 #serviceSelector {
   padding: 10px;
+  text-align-last: center;
 }
 #serviceSelector:focus {
   border: 3px solid var(--secondColor);
 }
 .peopleAmt {
   padding: 10px;
+  text-align: center;
 }
 .peopleAmt:focus {
   border: 3px solid var(--secondColor);
